--- a/crates/simples3-cli/Cargo.toml
+++ b/crates/simples3-cli/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 simples3-core = { path = "../simples3-core" }
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4", features = ["derive", "env"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tabled = "0.17"
