--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,19 @@ services:
     build: .
     ports:
       - "9000:9000"
+      - "9001:9001"
     volumes:
       - simples3-data:/data
       - simples3-metadata:/metadata
     environment:
       - SIMPLES3_BIND=0.0.0.0:9000
+      - SIMPLES3_ADMIN_BIND=0.0.0.0:9001
       - SIMPLES3_HOSTNAME=s3.localhost
       - SIMPLES3_REGION=us-east-1
       - SIMPLES3_LOG_LEVEL=info
 #      - SIMPLES3_ANONYMOUS_GLOBAL=true
+#      - SIMPLES3_ADMIN_TOKEN=
+#      - SIMPLES3_ADMIN_ENABLED=true
 
 volumes:
   simples3-data:
