feat: add TOML init config for declarative bootstrap of buckets and credentials
Allow the server to provision buckets and credentials at startup from a
TOML file via --init-config flag or SIMPLES3_INIT_CONFIG env var. The
init is idempotent — safe to run on every boot with existing items
silently skipped. Also adds duplicate credential guard to create_credential.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
 #      - SIMPLES3_ANONYMOUS_GLOBAL=true
 #      - SIMPLES3_ADMIN_TOKEN=
 #      - SIMPLES3_ADMIN_ENABLED=true
+#      - SIMPLES3_INIT_CONFIG=/config/init.toml
+#    volumes:
+#      - ./init.toml:/config/init.toml:ro
 
 volumes:
   simples3-data:
