--- a/crates/simples3-core/Cargo.toml
+++ b/crates/simples3-core/Cargo.toml
@@ -18,6 +18,7 @@ hmac = { workspace = true }
 hex = { workspace = true }
 quick-xml = { workspace = true }
 percent-encoding = { workspace = true }
+toml = { workspace = true }
 axum = "0.8"
 http = "1"
 tokio-util = { version = "0.7", features = ["io"] }
