feat: add health checks and Prometheus metrics on admin port
Add /health, /ready, and /metrics endpoints on the admin port (9001),
served without authentication. Request metrics middleware records
counters, histograms, and error counters per S3 operation. Storage
gauges (bucket count, object count, bytes, credentials, multipart
uploads, uptime) are collected on-demand at scrape time. Includes
Docker healthcheck directives and 5 integration tests.

--- a/crates/simples3-server/Cargo.toml
+++ b/crates/simples3-server/Cargo.toml
@@ -20,6 +20,8 @@ uuid = { workspace = true }
 quick-xml = { workspace = true }
 tokio-util = { version = "0.7", features = ["io"] }
 percent-encoding = { workspace = true }
+metrics = "0.24"
+metrics-exporter-prometheus = "0.16"
 
 [dev-dependencies]
 tempfile = "3"
