--- a/crates/simples3-core/Cargo.toml
+++ b/crates/simples3-core/Cargo.toml
@@ -19,6 +19,7 @@ hex = { workspace = true }
 quick-xml = { workspace = true }
 percent-encoding = { workspace = true }
 toml = { workspace = true }
+ipnet = "2"
 axum = "0.8"
 http = "1"
 tokio-util = { version = "0.7", features = ["io"] }
