--- a/crates/simples3-server/Cargo.toml
+++ b/crates/simples3-server/Cargo.toml
@@ -8,18 +8,18 @@ simples3-core = { path = "../simples3-core" }
 tokio = { workspace = true }
 axum = "0.8"
 tower = "0.5"
-tower-http = { version = "0.6", features = ["trace"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 http = "1"
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4", features = ["derive", "env"] }
 chrono = { workspace = true }
 uuid = { workspace = true }
 quick-xml = { workspace = true }
 tokio-util = { version = "0.7", features = ["io"] }
 percent-encoding = { workspace = true }
+sha2 = { workspace = true }
 metrics = "0.24"
 metrics-exporter-prometheus = "0.16"
 
