--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
 #      - SIMPLES3_INIT_CONFIG=/config/init.toml
 #      - SIMPLES3_MULTIPART_TTL=86400
 #      - SIMPLES3_MULTIPART_CLEANUP_INTERVAL=3600
+#      - SIMPLES3_LIFECYCLE_SCAN_INTERVAL=3600
     healthcheck:
       test: ["CMD", "bash", "-c", "exec 3<>/dev/tcp/localhost/9001 && echo -e 'GET /ready HTTP/1.0\\r\\nHost: localhost\\r\\n\\r\\n' >&3 && head -1 <&3 | grep -q '200 OK'"]
       interval: 5s
