--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           curl -fsSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o awscliv2.zip
           unzip -q awscliv2.zip
-          sudo ./aws/install
+          sudo ./aws/install --update
           rm -rf awscliv2.zip aws/
 
       - name: Run E2E tests
