--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,19 +13,38 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - os: macos-latest
+            target: aarch64-apple-darwin
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
 
       - uses: dtolnay/rust-toolchain@stable
 
       - uses: Swatinem/rust-cache@v2
+        with:
+          key: ${{ matrix.target }}
 
       - name: Build
-        run: cargo build --workspace
+        run: cargo build --release --workspace
 
       - name: Test
         run: cargo test --workspace
+
+      - name: Upload server binary (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: simples3-server-linux
+          path: target/release/simples3-server
+          retention-days: 1
 
   e2e:
     runs-on: ubuntu-latest
@@ -33,9 +52,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: dtolnay/rust-toolchain@stable
+      - name: Download server binary
+        uses: actions/download-artifact@v4
+        with:
+          name: simples3-server-linux
+          path: bin/
 
-      - uses: Swatinem/rust-cache@v2
+      - name: Make binary executable
+        run: chmod +x bin/simples3-server
 
       - name: Install AWS CLI
         run: |
@@ -45,7 +69,7 @@ jobs:
           rm -rf awscliv2.zip aws/
 
       - name: Run E2E tests
-        run: ./tests/e2e.sh
+        run: ./tests/e2e.sh bin/simples3-server
 
   docker:
     runs-on: ubuntu-latest
